# flatmaxxing

./: .gitignore  CLAUDE.md  README.md  biome.json  flatmaxx.entitlements  flatmaxxing.example.toml  flatmaxxing.schema.json  package.json  taplo.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
Formula/: flatmaxx.rb
native/: .gitattributes  .gitignore  .taplo.toml  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
native/.cargo/: config.toml
native/.github/workflows/: CI.yml
native/__test__/: index.spec.ts  tsconfig.json
native/scripts/: align-linkedit.js
native/src/: accessibility.rs  accessibility_helpers.rs  composed.rs  lib.rs  mouse.rs  mouse_helpers.rs  permissions.rs  structs.rs
patches/: sharp@0.35.2.patch
scripts/: build.ts  generate-schema.ts  install.sh
skills/flatmaxxing/: SKILL.md
src/: index.ts  utils.ts  version.ts
src/cli/: prompt.ts
src/cnc/: cncJobPlan.test.ts  cncJobPlan.ts  effectiveToolDiameter.test.ts  effectiveToolDiameter.ts  index.ts  types.ts
src/commands/: build.test.ts  build.ts  clean.test.ts  clean.ts  cliOverrides.test.ts  cliOverrides.ts  configEditor.test.ts  configEditor.tsx  configEditorModel.ts  doctor.ts  helpers.ts  index.ts  init.test.ts  init.ts  skills.ts  types.ts  update.ts  validate.test.ts  validate.ts
src/compute/: dxfCompute.test.ts  dxfCompute.ts  dxfWorker.ts  index.ts  types.ts  (+1 more)
testdir/: bad_origin.kicad_pcb  flatmaxxing.dev.toml  flatmaxxing.user.toml  new-and-improved-zefir-btn.kicad_pcb  new-and-improved-zefir-btn.kicad_pro  no_origin.kicad_pcb  valid_board.kicad_pcb
(+479 files in other folders)
